# snake-shared-control

./: .gitignore  .gitmodules  README.md  config.yaml  irc.txt  snake-shared-control.cabal  stack.yaml
app/: Main.hs
src/: Draw.hs  Food.hs  Snake.hs  World.hs
