name:                snake-shared-control
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/a6a3uh/snake-shared-control#readme
license:             BSD3
license-file:        LICENSE
author:              Ali Tlisov
maintainer:          ali.tlisov@gmail.com
copyright:           2017 Ali Tlisov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snake
                     , Draw
                     , World
                     , Food
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , random
                     , QuickCheck
                     , Unique
                     , lens
                     , mtl
                    --  , linear
                    --  , aeson
                    --  , lens-aeson
                     , aeson
                     , lens
                     , lens-aeson
                     , text
                     , pomdp
  
  default-language:    Haskell2010

executable snake-shared-control-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snake-shared-control
                     , gloss
                     , random
                     , scientific
                     , text
                     , mtl
                     , lens
                     , bytestring
                     , aeson
                     , yaml
  default-language:    Haskell2010

test-suite snake-shared-control-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snake-shared-control
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/a6a3uh/snake-shared-control
